--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Karla:ital,wght@0,200..800;1,200..800&display=swap');
+
 @import 'tailwindcss';
 
 @import 'tw-animate-css';
@@ -5,72 +7,97 @@
 @custom-variant dark (&:is(.dark *));
 
 :root {
-	--radius: 0.625rem;
-	--background: oklch(1 0 0);
-	--foreground: oklch(0.129 0.042 264.695);
-	--card: oklch(1 0 0);
-	--card-foreground: oklch(0.129 0.042 264.695);
-	--popover: oklch(1 0 0);
-	--popover-foreground: oklch(0.129 0.042 264.695);
-	--primary: oklch(0.208 0.042 265.755);
-	--primary-foreground: oklch(0.984 0.003 247.858);
-	--secondary: oklch(0.968 0.007 247.896);
-	--secondary-foreground: oklch(0.208 0.042 265.755);
-	--muted: oklch(0.968 0.007 247.896);
-	--muted-foreground: oklch(0.554 0.046 257.417);
-	--accent: oklch(0.968 0.007 247.896);
-	--accent-foreground: oklch(0.208 0.042 265.755);
-	--destructive: oklch(0.577 0.245 27.325);
-	--border: oklch(0.929 0.013 255.508);
-	--input: oklch(0.929 0.013 255.508);
-	--ring: oklch(0.704 0.04 256.788);
-	--chart-1: oklch(0.646 0.222 41.116);
-	--chart-2: oklch(0.6 0.118 184.704);
-	--chart-3: oklch(0.398 0.07 227.392);
-	--chart-4: oklch(0.828 0.189 84.429);
-	--chart-5: oklch(0.769 0.188 70.08);
-	--sidebar: oklch(0.984 0.003 247.858);
-	--sidebar-foreground: oklch(0.129 0.042 264.695);
-	--sidebar-primary: oklch(0.208 0.042 265.755);
-	--sidebar-primary-foreground: oklch(0.984 0.003 247.858);
-	--sidebar-accent: oklch(0.968 0.007 247.896);
-	--sidebar-accent-foreground: oklch(0.208 0.042 265.755);
-	--sidebar-border: oklch(0.929 0.013 255.508);
-	--sidebar-ring: oklch(0.704 0.04 256.788);
+	--background: #f5f5f5;
+	--foreground: #424242;
+	--card: #ffffff;
+	--card-foreground: #424242;
+	--popover: #ffffff;
+	--popover-foreground: #424242;
+	--primary: #4a90e2;
+	--primary-foreground: #ffffff;
+	--secondary: #66bb6a;
+	--secondary-foreground: #ffffff;
+	--muted: #cccccc;
+	--muted-foreground: #424242;
+	--accent: #ffd740;
+	--accent-foreground: #424242;
+	--destructive: #ff3737;
+	--border: #dddddd;
+	--input: #ffffff;
+	--ring: #4a90e2;
+	--chart-1: #4a90e2;
+	--chart-2: #66bb6a;
+	--chart-3: #ffd740;
+	--chart-4: #ff99cc;
+	--chart-5: #ccff99;
+	--sidebar: #f5f5f5;
+	--sidebar-foreground: #424242;
+	--sidebar-primary: #4a90e2;
+	--sidebar-primary-foreground: #ffffff;
+	--sidebar-accent: #ffd740;
+	--sidebar-accent-foreground: #424242;
+	--sidebar-border: #dddddd;
+	--sidebar-ring: #4a90e2;
+
+	--font-sans: Inter;
+	--font-serif: Merriweather;
+	--font-mono: Monaco;
+
+	--radius: 1rem;
+
+	--shadow-2xs: 0px 2px 5px 0px #000000;
+	--shadow-xs: 0px 2px 5px 0px #000000;
+	--shadow-sm: 0px 2px 5px 0px #000000, 0px 1px 2px -1px #000000;
+	--shadow: 0px 2px 5px 0px #000000, 0px 1px 2px -1px #000000;
+	--shadow-md: 0px 2px 5px 0px #000000, 0px 2px 4px -1px #000000;
+	--shadow-lg: 0px 2px 5px 0px #000000, 0px 4px 6px -1px #000000;
+	--shadow-xl: 0px 2px 5px 0px #000000, 0px 8px 10px -1px #000000;
+	--shadow-2xl: 0px 2px 5px 0px #000000;
+
+	--tracking-normal: 0px;
 }
 
 .dark {
-	--background: oklch(0.129 0.042 264.695);
-	--foreground: oklch(0.984 0.003 247.858);
-	--card: oklch(0.208 0.042 265.755);
-	--card-foreground: oklch(0.984 0.003 247.858);
-	--popover: oklch(0.208 0.042 265.755);
-	--popover-foreground: oklch(0.984 0.003 247.858);
-	--primary: oklch(0.929 0.013 255.508);
-	--primary-foreground: oklch(0.208 0.042 265.755);
-	--secondary: oklch(0.279 0.041 260.031);
-	--secondary-foreground: oklch(0.984 0.003 247.858);
-	--muted: oklch(0.279 0.041 260.031);
-	--muted-foreground: oklch(0.704 0.04 256.788);
-	--accent: oklch(0.279 0.041 260.031);
-	--accent-foreground: oklch(0.984 0.003 247.858);
-	--destructive: oklch(0.704 0.191 22.216);
-	--border: oklch(1 0 0 / 10%);
-	--input: oklch(1 0 0 / 15%);
-	--ring: oklch(0.551 0.027 264.364);
-	--chart-1: oklch(0.488 0.243 264.376);
-	--chart-2: oklch(0.696 0.17 162.48);
-	--chart-3: oklch(0.769 0.188 70.08);
-	--chart-4: oklch(0.627 0.265 303.9);
-	--chart-5: oklch(0.645 0.246 16.439);
-	--sidebar: oklch(0.208 0.042 265.755);
-	--sidebar-foreground: oklch(0.984 0.003 247.858);
-	--sidebar-primary: oklch(0.488 0.243 264.376);
-	--sidebar-primary-foreground: oklch(0.984 0.003 247.858);
-	--sidebar-accent: oklch(0.279 0.041 260.031);
-	--sidebar-accent-foreground: oklch(0.984 0.003 247.858);
-	--sidebar-border: oklch(1 0 0 / 10%);
-	--sidebar-ring: oklch(0.551 0.027 264.364);
+	--background: #424242;
+	--foreground: #f5f5f5;
+	--card: #333333;
+	--card-foreground: #f5f5f5;
+	--popover: #333333;
+	--popover-foreground: #f5f5f5;
+	--primary: #4a90e2;
+	--primary-foreground: #ffffff;
+	--secondary: #66bb6a;
+	--secondary-foreground: #ffffff;
+	--muted: #666666;
+	--muted-foreground: #f5f5f5;
+	--accent: #ffd740;
+	--accent-foreground: #424242;
+	--destructive: #ff3737;
+	--border: #555555;
+	--input: #333333;
+	--ring: #4a90e2;
+	--chart-1: #4a90e2;
+	--chart-2: #66bb6a;
+	--chart-3: #ffd740;
+	--chart-4: #ff99cc;
+	--chart-5: #ccff99;
+	--sidebar: #424242;
+	--sidebar-foreground: #f5f5f5;
+	--sidebar-primary: #4a90e2;
+	--sidebar-primary-foreground: #ffffff;
+	--sidebar-accent: #ffd740;
+	--sidebar-accent-foreground: #424242;
+	--sidebar-border: #555555;
+	--sidebar-ring: #4a90e2;
+
+	--shadow-2xs: 0px 2px 4px 0px #000000;
+	--shadow-xs: 0px 2px 4px 0px #000000;
+	--shadow-sm: 0px 2px 4px 0px #000000, 0px 1px 2px -1px #000000;
+	--shadow: 0px 2px 4px 0px #000000, 0px 1px 2px -1px #000000;
+	--shadow-md: 0px 2px 4px 0px #000000, 0px 2px 4px -1px #000000;
+	--shadow-lg: 0px 2px 4px 0px #000000, 0px 4px 6px -1px #000000;
+	--shadow-xl: 0px 2px 4px 0px #000000, 0px 8px 10px -1px #000000;
+	--shadow-2xl: 0px 2px 4px 0px #000000;
 }
 
 @theme inline {
